tests/toy/neg/000928_mutation.toylang
program a = { if a a sleep; } .
